impl: feat: client: fix dialog overflowing

--- a/client/src/assets/editor-ui.scss
+++ b/client/src/assets/editor-ui.scss
@@ -919,7 +919,9 @@
         width: 100%;
         position: sticky;
         top: 0;
-        background-color: var(--color-card-dialog-background);
+        background-color: var(--color-background-accent);
+        backdrop-filter: blur(18px);
+        border-radius: var(--border-radius);
         z-index: 1;
         padding: 0.25em 0;
     }
